force-app/main/default/objects/Form_Data__c/Form_Data__c.object-meta.xml
<CustomObject>
    <description>The data entered on the web site for the given application or profile via the given input field component</description>
    <label>Form Data</label>
    <nameField>
        <displayFormat>FD-{0000000}</displayFormat>
        <label>Form Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>