force-app/main/default/objects/Form_Data__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The address to which this form data is linked</description>
    <inlineHelpText>The address to which this form data is linked</inlineHelpText>
    <label>Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Form Data</relationshipLabel>
    <relationshipName>Form_Data</relationshipName>
    <type>Lookup</type>
</CustomField>