force-app/main/default/objects/Form_Data__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The advisor to which this form data is linked</description>
    <inlineHelpText>The advisor to which this form data is linked</inlineHelpText>
    <label>Advisor</label>
    <referenceTo>Advisor__c</referenceTo>
    <relationshipLabel>Form Data</relationshipLabel>
    <relationshipName>Form_Data</relationshipName>
    <type>Lookup</type>
</CustomField>