force-app/main/default/objects/Form_Data__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact (if any) to which this form data is linked</description>
    <inlineHelpText>The contact (if any) to which this form data is linked</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Form Data</relationshipLabel>
    <relationshipName>Form_Data</relationshipName>
    <type>Lookup</type>
</CustomField>