force-app/main/default/objects/Form_Data__c/fields/Data_numeric__c.field-meta.xml
<CustomField>
    <fullName>Data_numeric__c</fullName>
    <description>Auto-compute the numeric version of the Data Text field if it represents a number</description>
    <formula>IF(ISNUMBER(Data_text__c), VALUE(Data_text__c), null)</formula>
    <inlineHelpText>Auto-compute the numeric version of the Data Text field if it represents a number</inlineHelpText>
    <label>Data numeric</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>