force-app/main/default/objects/Form_Data__c/fields/Data_text__c.field-meta.xml
<CustomField>
    <fullName>Data_text__c</fullName>
    <description>The data as a short text string</description>
    <inlineHelpText>The data as a short text string</inlineHelpText>
    <label>Data text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>