force-app/main/default/objects/Form_Data__c/fields/Data_textarea__c.field-meta.xml
<CustomField>
    <fullName>Data_textarea__c</fullName>
    <description>The textarea data (non-empty if the data is long text)</description>
    <inlineHelpText>The textarea data (non-empty if the data is long text)</inlineHelpText>
    <label>Data textarea</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>