force-app/main/default/objects/Form_Data__c/fields/Disabled__c.field-meta.xml
<CustomField>
    <fullName>Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then the input field for this form data was disabled at the time of the last save.</description>
    <inlineHelpText>If checked, then the input field for this form data was disabled at the time of the last save.</inlineHelpText>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>