force-app/main/default/objects/Form_Data__c/fields/Form_Component__c.field-meta.xml
<CustomField>
    <fullName>Form_Component__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The form component (e.g. app question) for which this value was entered</description>
    <inlineHelpText>The form component (e.g. app question) for which this value was entered</inlineHelpText>
    <label>Form Component</label>
    <referenceTo>Form_Component__c</referenceTo>
    <relationshipName>Form_Component_Values</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>