force-app/main/default/objects/Form_Data__c/fields/Form_Instance__c.field-meta.xml
<CustomField>
    <fullName>Form_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The form instance to which this data belongs</description>
    <inlineHelpText>The form instance to which this data belongs</inlineHelpText>
    <label>Form Instance</label>
    <referenceTo>Form_Instance__c</referenceTo>
    <relationshipLabel>Form Data</relationshipLabel>
    <relationshipName>Form_Data</relationshipName>
    <type>Lookup</type>
</CustomField>