force-app/main/default/objects/Form_Data__c/fields/HasShortText__c.field-meta.xml
<CustomField>
    <fullName>HasShortText__c</fullName>
    <description>Checked if this form data record has non-blank short text (as opposed to long text)</description>
    <formula>Data_text__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if this form data record has non-blank short text (as opposed to long text)</inlineHelpText>
    <label>HasShortText</label>
    <type>Checkbox</type>
</CustomField>