force-app/main/default/objects/Form_Data__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <description>A counter for repeating component data, that is, the form instance has multiple values for the same component.  Such components usually appear in the rows of an expandable table.</description>
    <inlineHelpText>A counter for repeating component data, that is, the form instance has multiple values for the same component.  Such components usually appear in the rows of an expandable table.</inlineHelpText>
    <label>Index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>