force-app/main/default/objects/Form_Data__c/fields/Initial_number__c.field-meta.xml
<CustomField>
    <fullName>Initial_number__c</fullName>
    <description>Initial numeric value of Data_text__c if one exists, else 0. (Otherwise reports throw error)</description>
    <formula>IF ( 
  ISNULL(Data_numeric__c) &amp;&amp; ISNUMBER( LEFT( Data_text__c, 2) ), VALUE(LEFT( Data_text__c, 2)),
 IF (ISNULL(Data_numeric__c) &amp;&amp; ISNUMBER( LEFT( Data_text__c, 1) ), VALUE(LEFT( Data_text__c, 1)), null)
)</formula>
    <inlineHelpText>Initial numeric value of Data_text__c if one exists, else 0. (Otherwise reports throw error)</inlineHelpText>
    <label>Initial number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>