force-app/main/default/objects/Form_Data__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The profile with which this value is associated</description>
    <inlineHelpText>The profile with which this value is associated</inlineHelpText>
    <label>Profile</label>
    <referenceTo>Profile__c</referenceTo>
    <relationshipLabel>Form Data</relationshipLabel>
    <relationshipName>Form_Data</relationshipName>
    <type>Lookup</type>
</CustomField>