force-app/main/default/objects/Form_Data__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The proposal with which this value is associated</description>
    <inlineHelpText>The proposal with which this value is associated</inlineHelpText>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Form Data</relationshipLabel>
    <relationshipName>Form_Data</relationshipName>
    <type>Lookup</type>
</CustomField>