force-app/main/default/objects/Form_Data__c/fields/Search_terms__c.field-meta.xml
<CustomField>
    <fullName>Search_terms__c</fullName>
    <description>Comma-separated list of search terms that appear in the Data textarea field of this form data (auto-maintained by apex code)</description>
    <inlineHelpText>Comma-separated list of search terms that appear in the Data textarea field of this form data (auto-maintained by apex code)</inlineHelpText>
    <label>Search terms</label>
    <type>TextArea</type>
</CustomField>