force-app/main/default/objects/Form_Data__c/fields/Search_terms_length__c.field-meta.xml
<CustomField>
    <fullName>Search_terms_length__c</fullName>
    <description>Number of characters in the Search terms field</description>
    <formula>LEN(Search_terms__c)</formula>
    <inlineHelpText>Number of characters in the Search terms field</inlineHelpText>
    <label>Search terms length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>