force-app/main/default/objects/Form_Data__c/fields/Target_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Id__c</fullName>
    <description>The Id of the record that this field value is meant to update (e.g. contact, address, email)</description>
    <inlineHelpText>The Id of the record that this field value is meant to update (e.g. contact, address, email)</inlineHelpText>
    <label>Target Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>