force-app/main/default/objects/Form_Data__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of this data</description>
    <inlineHelpText>The type of this data</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>textarea</fullName>
            </value>
            <value>
                <fullName>indicator</fullName>
            </value>
            <value>
                <fullName>select</fullName>
            </value>
            <value>
                <fullName>radio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>