force-app/main/default/objects/Form_Data__c/fields/Unique_code__c.field-meta.xml
<CustomField>
    <fullName>Unique_code__c</fullName>
    <description>Code formed from the form data&apos;s links to form component and form instance plus the index (if any). This code should be unique across form data records.</description>
    <formula>&quot;|&quot; &amp;
LEFT(Form_Instance__c, 15) &amp; &quot;|&quot; &amp;
LEFT(Form_Component__c, 15) &amp; &quot;|&quot; &amp;
TEXT(Index__c) &amp; &quot;|&quot;</formula>
    <inlineHelpText>Code formed by combining the ids of the linked form component and form instance, plus the index (if any). This code should be unique across form data records.</inlineHelpText>
    <label>Unique code</label>
    <type>Text</type>
</CustomField>