force-app/main/default/objects/Form_Data__c/validationRules/Index_blank_or_greaterOrEqual_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Index_blank_or_greaterOrEqual_1</fullName>
    <active>true</active>
    <description>The Index field should be either blank or &gt;= 1.</description>
    <errorConditionFormula>AND(
 NOT (ISBLANK ( Index__c )),
 Index__c &lt; 1
)</errorConditionFormula>
    <errorDisplayField>Index__c</errorDisplayField>
    <errorMessage>The Index field should be either blank or &gt;= 1.</errorMessage>
</ValidationRule>