force-app/main/default/objects/Form_Data__c/listViews/Form_instance_Id.listView-meta.xml
<ListView>
    <fullName>Form_instance_Id</fullName>
    <columns>NAME</columns>
    <columns>Profile__c</columns>
    <columns>Form_Instance__c</columns>
    <columns>Form_Component__c</columns>
    <columns>Type__c</columns>
    <columns>Index__c</columns>
    <columns>Data_text__c</columns>
    <columns>Data_textarea__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Form_Instance__c</field>
        <operation>equals</operation>
        <value>FI-032969</value>
    </filters>
    <label>Form instance Id</label>
</ListView>