force-app/main/default/objects/Form_Data__c/listViews/Recent.listView-meta.xml
<ListView>
    <fullName>Recent</fullName>
    <columns>NAME</columns>
    <columns>Profile__c</columns>
    <columns>Form_Instance__c</columns>
    <columns>Form_Component__c</columns>
    <columns>Type__c</columns>
    <columns>Data_text__c</columns>
    <columns>Data_textarea__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>3/30/2016 12:00 AM</value>
    </filters>
    <label>Recent</label>
</ListView>